--- a/app/src/main/res/layout/activity_large_portraint.xml
+++ b/app/src/main/res/layout/activity_large_portraint.xml
@@ -6,12 +6,12 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
+                tools:context="com.example.imagefeatcher.LargePortraintActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+   <ImageView
+       android:id="@+id/image"
+       android:scaleType="fitCenter"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
 
 </RelativeLayout>
